<resources>
    <string name="app_name">fitness</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_goal">Goal:</string>
    <string name="title_steps">Steps:</string>
    <string name="title_calories">Calories:</string>
    <string name="title_distance">Distance:</string>

    <string name="goal_setting">Set My Daily Goal:</string>

    <string name="confirm">Confirm</string>

    <string name="back">Back</string>
    <string name="title_activity_maps">Map</string>
</resources>
