<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/title_goal"
        android:textSize="16dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/goal"
        android:textSize="16dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="100"/>
    <TextView
        android:text="@string/title_steps"
        android:textSize="16dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/steps"
        android:textSize="16dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="100"/>
    <TextView
        android:text="@string/title_calories"
        android:textSize="16dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/calories"
        android:textSize="16dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="250"/>
    <TextView
        android:text="@string/title_distance"
        android:textSize="16dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/distance"
        android:textSize="16dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="500"/>

</LinearLayout>